# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
adlt_base_test = [
    "unittest_adlt_base_backtrace",
    "unittest_adlt_base_backtrace2",
    "unittest_adlt_base_cdtors",
    "unittest_adlt_base_cross",
    "unittest_adlt_base_deps",
    "unittest_adlt_base_deps_dlopen",
    "unittest_adlt_base_dlopen_c",
    "unittest_adlt_base_dlopen_cpp",
    "unittest_adlt_base_ehframe13",
    "unittest_adlt_base_ehframe123",
    "unittest_adlt_base_heap",
    "unittest_adlt_base_oop",
    "unittest_adlt_base_relocs",
    "unittest_adlt_base_rpath",
    "unittest_adlt_base_soname1_fix_libab",
    "unittest_adlt_base_soname1_fix_libba",
    "unittest_adlt_base_varargs",
    "unittest_adlt_base_duplicates",
    "unittest_adlt_base_negative_verdef",
    "unittest_adlt_base_negative_verneed",
    "unittest_adlt_base_verdef",
    "unittest_adlt_base_verneed",
]